# 3L

./: .dockerignore  .env.example  .gitignore  3l-server.service  CHANGELOG.md  Dockerfile  Makefile  README.md  _check_unknown.py  config.py  daily_update.py  docker-compose.yml  docker-entrypoint.sh  fetch_momentum.py  fill_history.py  fix-data.py  gen_fund_flow_chart.py  gen_index_chart.py  generate_review_data.py  index.html  industry.html  journal.html  macro.html  manage.py  monitor.html  nav.js  package.json  review.html  run_backtest.py  run_backtest_detailed.py  server.py  setup.sh  simulation.html  skills.html  stock_analysis.html  tip-detail.html  tips.html  top_gainers.html  trend_candidates.html  watchlist.html  (+1 more)
analysis/: Dockerfile  pyproject.toml  server.py
analysis/frontend/: index.html
analysis/threel_analysis/: __init__.py  analysis.py  card.py
archive/: 2026-05-24.html  fill_stock_names.py
backend/: config.py
core/: pyproject.toml
core/threel_core/: __init__.py  atr.py  buy_point_detection.py  data_layer.py  db.py  ema_utils.py  trend_trading.py
core/threel_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
deploy/: 3l-server.service  backup.sh  crontab  deploy.sh  docker-compose.yml  env.template  nginx-3l.conf  rollback.sh  setup.sh
docs/: 3l-analysis-usage.md  ARCHITECTURE_REFACTOR.md  alarm-system-redesign.md  architecture-v2.md  architecture.md  backend-cleanup-v1.md  concept-wave-tracking-design.md  concept-wave-tracking-plan.md  concept-wave-wireframe.excalidraw  core-extraction-plan.md  dark-pdf-template.html  (+29 more)
(+708 files in other folders)
