[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "threel-core"
version = "0.1.0"
description = "3L 交易系统 — 核心逻辑共享包"
authors = [{name = "3L"}]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["threel_core*"]
